--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "eslint": "2.13.1",
     "eslint-config-airbnb-base": "3.0.1",
     "eslint-plugin-import": "1.9.2",
+    "git-scripts": "0.2.1",
     "nodemon": "1.9.2"
+  },
+  "git": {
+    "scripts": {
+      "pre-commit": "npm run lint"
+    }
   }
 }
