--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "good": "7.0.1",
     "good-console": "6.1.2",
     "good-squeeze": "4.0.0",
-    "hapi": "13.4.1"
+    "hapi": "13.4.1",
+    "joi": "9.0.0-3"
   },
   "devDependencies": {
     "eslint": "2.13.1",
