:arrow_up: Add Istanbul and coverage script

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start:watch": "nodemon --exec 'npm start'",
     "test": "npm run test:end-to-end",
     "test:end-to-end": "NODE_ENV=test tape test/end-to-end/*.test.js",
+    "coverage": "istanbul cover tape -- test/**/*.test.js",
     "lint": "eslint ./"
   },
   "dependencies": {
@@ -24,6 +25,7 @@
     "eslint-config-airbnb-base": "3.0.1",
     "eslint-plugin-import": "1.9.2",
     "git-scripts": "0.2.1",
+    "istanbul": "0.4.4",
     "nodemon": "1.9.2",
     "tape": "4.6.0"
   },
