--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "good-console": "6.1.2",
     "good-squeeze": "4.0.0",
     "hapi": "13.4.1",
-    "joi": "9.0.0-3"
+    "hapi-swagger": "6.1.0",
+    "inert": "4.0.1",
+    "joi": "9.0.0-3",
+    "vision": "4.1.0"
   },
   "devDependencies": {
     "eslint": "2.13.1",
